crates/sui-adapter-transactional-tests/tests/shared/by_value_shared_object_deletion_via_move_call_fails.exp
processed 16 tasks

task 1 'publish'. lines 6-57:
Error: error[E03002]: unbound module
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpI119Il:10:9
   │
10 │     use sui::sui::SUI;
   │         ^^^^^^^^ Invalid 'use'. Unbound module: 'sui::sui'

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpI119Il:16:50
   │
16 │         transfer::public_share_object(coin::zero<BFC>(ctx))
   │                                                  ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpI119Il:41:36
   │
41 │     public fun share_coin(o2: Coin<BFC>) {
   │                                    ^^^ Unbound type 'BFC' in current scope



task 2 'run'. lines 59-59:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'run'. lines 61-61:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 4 'view-object'. lines 63-63:
Error: task 4, lines 63-63. Unbound fake id 2,0

task 5 'view-object'. lines 65-67:
Error: task 5, lines 65-65. Unbound fake id 3,0

task 6 'programmable'. lines 68-72:
Error: INVALID TEST. Unknown object, object(2,0)

task 7 'programmable'. lines 73-77:
Error: INVALID TEST. Unknown object, object(2,0)

task 8 'programmable'. lines 78-82:
Error: INVALID TEST. Unknown object, object(2,0)

task 9 'programmable'. lines 83-85:
Error: INVALID TEST. Unknown object, object(2,0)

task 10 'run'. lines 87-87:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 11 'view-object'. lines 89-91:
Error: task 11, lines 89-89. Unbound fake id 10,0

task 12 'programmable'. lines 92-98:
Error: INVALID TEST. Unknown object, object(10,0)

task 13 'programmable'. lines 99-105:
Error: INVALID TEST. Unknown object, object(10,0)

task 14 'programmable'. lines 106-112:
Error: INVALID TEST. Unknown object, object(10,0)

task 15 'programmable'. lines 113-117:
Error: INVALID TEST. Unknown object, object(10,0)
